<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mayokun.quicknotes.Activities.NoteActivity">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="@android:string/cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="Next"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_note"
        android:orderInCategory="102"
        android:title="@string/action_send_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_reminder"
        android:orderInCategory="103"
        android:title="Set Reminder" />
</menu>
